2018-06-13  Yury Aliaev  <mutab0r@rambler.ru>
	* app/st-subs.c, app/drivers/jack-output.c: code cleanup (unneeded 
headers).

2018-06-08  Yury Aliaev  <mutab0r@rambler.ru>
	* app/mixer.h, app/mixers/integer32.c, app/mixers/kb-x86.c: the bug 
with high discretization frequences is fixed (now even 96 ksamples/s is 
ok).

2018-06-07  Yury Aliaev  <mutab0r@rambler.ru>
	* app/sample-editor.c: Sampling dialog is rewritten to be more 
convenient.

2018-06-02  Yury Aliaev  <mutab0r@rambler.ru>
	* app/sample-editor.c: Code optimization and cleanup.

2018-05-31  Yury Aliaev  <mutab0r@rambler.ru>
	* app/sample-editor.c: Stereo conversion dialogs are made more 
	compact; file opening/closing issues are cleaned up and fixed.

2016-07-12  Yury Aliaev  <mutab0r@rambler.ru>
	* app/gui-subs.c: Bugfix (wrong pointer usage).

2014-12-21  Yury Aliaev  <mutab0r@rambler.ru>
	* app/drivers/jack-output.c: Jack output driver now works.

2014-12-06  Yury Aliaev  <mutab0r@rambler.ru>
	* app/audio.c, app/cheat-sheet.c, app/drivers/jack-output.c,
	app/file-operations.c, app/gui-subs.[ch], app/gui.c,
	app/instrument-editor.c, app/keys.c, app/preferences.c,
	app/sample-editor.c, app/xm.c: A small bug with error/warning dialogs is
	fixed.

2014-11-26  Yury Aliaev  <mutab0r@rambler.ru>
	* app/drivers/oss.c: Fixed a crash because of incorrect buffer size.

2014-11-22  Yury Aliaev  <mutab0r@rambler.ru>
	* app/envelope-box.c: Bugfix (loop and sustain points are preserved
	when changing current instrument).

2014-06-01  Yury Aliaev  <mutab0r@rambler.ru>
	* app/gui.c: fixed switching to tracker after current module saving
	from a page other than tracker.

2014-04-12  Yury Aliaev  <mutab0r@rambler.ru>
	* app/file-operations.[ch], app/gui.c, app/instrument-editor.c,
	app/sample-editor.c: switching back from file operations page
	is improved;
	* app/instrument-editor.c: module is marked as modified when a new
	instrument has been loaded.

2014-02-25  Yury Aliaev  <mutab0r@rambler.ru>